--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,35 @@
     align-items: center;
     justify-content: space-evenly;
     border-radius: 20px;
-    box-shadow: 0 0 20px #000000d8;
+    box-shadow: 10px 10px 20px #0000005b;
+}
+
+.title {
+    color: blueviolet;
+    margin-top: -70px;
+    text-shadow: 3px 3px 10px #00000091;
+    background-color: aliceblue;
+    font-size: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+input[type=text] {
+    border-radius: 50px;
+    box-shadow: 1px 1px 5px #333333;
+    background: #cccccc;
+    border: 1px solid #000000;
+    width: 150px
+}
+
+textarea {
+    border: 1px solid #000000;
+    background: #cccccc;
+    width: 150px;
+    height: 100px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    box-shadow: 1px 1px 2px #333333;
+    -moz-box-shadow: 1px 1px 2px #333333;
+    -webkit-box-shadow: 1px 1px 2px #333333;
 }
